Fix overflow

--- a/web/src/components/weekly-view/WeeklyView.css
+++ b/web/src/components/weekly-view/WeeklyView.css
@@ -10,13 +10,11 @@
   display: flex;
   flex-direction: row;
   flex-grow: 1;
-  overflow: auto;
 }
 
 @media screen and (max-width: 648px) {
   .weekly-view-day-container {
     flex-direction: column;
-    overflow: scroll;
   }
   
 }
